--- a/goals/app/views/users/_form.html.erb
+++ b/goals/app/views/users/_form.html.erb
@@ -17,14 +17,10 @@
   </div>
 
   <div>
-    <%= form.label :password_digest, style: "display: block" %>
-    <%= form.text_field :password_digest %>
+    <%= form.label :password, style: "display: block" %>
+    <%= form.text_field :password %>
   </div>
 
-  <div>
-    <%= form.label :session_token, style: "display: block" %>
-    <%= form.text_field :session_token %>
-  </div>
 
   <div>
     <%= form.submit %>
